fixed various layout issues with home grid and card sections

--- a/src/app/home/home.card.carousel.component.css
+++ b/src/app/home/home.card.carousel.component.css
@@ -1,24 +1,26 @@
-mat-grid-tile {
-    /* background: lightblue; */
-    /* border: 1px solid black; */
-    padding: 10px;
+.row {
+    display: flex !important;
+    justify-content: center !important;
+    overflow-y: scroll;
+    height: 332px;
 }
 
-mat-grid-tile .card {
-    width: 100%;
-    height: 100%;
-    padding: 10px;
+.carousel.slide {
+    background: aqua !important;
+    padding: 20px;
+}
+
+.card {
+    margin: 0 30px !important;
 }
 
 .card img {
-    width: 100%;
-    max-height: 250px;
+    width: 100% !important;
+    max-height: 250px !important;
 }
 
 .container-fluid {
-    max-width: 900px;
-}
-
-.my-grid .mat-figure {
-    margin: 10px !important;
+    height: 600px !important;
+    padding-top: 125px;
+    border: 1px solid black;
 }
